Refactor ProductService and add filtering methods
Refactored ProductService to improve structure and added filtering methods for category, price, and name.